# dash-gov

./: CLAUDE.md  README.md  RELEASE_NOTES.md  pyproject.toml
.github/workflows/: ci.yml  daily.yml  release.yml
dashgov/: __init__.py  classifier.py  lineage.py  parser.py  scanner.py  ui.py
docs/api/: dashgov.html  index.html  search.js
marketplace/: listing.json  quickstart_notebook.py
tests/: test_classifier.py  test_dashgov.py  test_lineage.py  test_parser.py  test_scanner.py
