[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dash-gov"
version = "0.1.0"
description = "Data governance and PII scanning for Databricks — with a built-in notebook UI"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Darshan Shah", email = "darshan.innovation@icloud.com" }]
keywords = ["databricks", "governance", "pii", "compliance", "unity-catalog"]
dependencies = ["ipywidgets>=8.0"]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "hatch"]

[project.urls]
Homepage = "https://github.com/darshan-innovation/dash-gov"
